# python_sqlAchemy

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
db/: picoles.sqlite
img/: 4e994b73-c469-4bd2-bee1-527e02232f4c.xlsx
python_sqlachemy/Apresentação/: README.md  atendentecao.md
python_sqlachemy/Introdução ao SQL Alchemy/: README.md
python_sqlachemy/Manipulando_Dados_com_SQL_Alchemy/: 05.2-populate_main.py  05.3-helpers.py
python_sqlachemy/Modelagem de Dados com SQL Alchemy/: README.md  modelagem de Dados.md
python_sqlachemy/Modelagem de Dados com SQL Alchemy/gusqla/03_sqla_sync/conf/: db_session.py
python_sqlachemy/Modelagem de Dados com SQL Alchemy/gusqla/03_sqla_sync/model/: aditivo_nutritivo.py  conserveante.py  ingrediente.py  sabor.py  tipo_embalagem.py  tipo_picole.py
python_sqlachemy/Modelagem_de_Dados_com_SQL_Alchemy/: README.md
python_sqlachemy/Modelagem_de_Dados_com_SQL_Alchemy/gusqla/03_sqla_sync/: create_main.py  delete_main.py  insert_main.py  update_main.py
python_sqlachemy/Modelagem_de_Dados_com_SQL_Alchemy/gusqla/03_sqla_sync/conf/: db_session.py  helpers.py  populate_main.py  select_main.py
python_sqlachemy/Modelagem_de_Dados_com_SQL_Alchemy/gusqla/03_sqla_sync/db/: picoles.sqlite
python_sqlachemy/Modelagem_de_Dados_com_SQL_Alchemy/gusqla/03_sqla_sync/model/: __all_models.py  aditivo_nutritivo.py  conservante.py  ingrediente.py  lote.py  model_base.py  nota_fiscal.py  picole.py  revendedor.py  sabor.py  tipo_embalagem.py  tipo_picole.py
